--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ categories    = ["api-bindings", "multimedia::images"]
 
 [dependencies]
 tesseract-sys = "~0.5"
-tesseract-plumbing = "~0.6"
+tesseract-plumbing = { git = "https://github.com/MGSousa/tesseract-plumbing" }
 thiserror = "1.0"
